removed margin to prevent page overflow

--- a/src/scss/resume.scss
+++ b/src/scss/resume.scss
@@ -8,7 +8,7 @@ h1 {
 
   & + p {
     text-align: center; // centers contact line
-    margin: 0.25rem 0 0.75rem 0; // adds space before/after contact line
+    margin: 0 0 0.5rem 0; // adds space before/after contact line
   }
 }
 
